--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,16 @@
 # OS files
 .DS_Store
 
+# Node / Next.js
+node_modules
+.next
+out
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp
+.pnp.js
+*.tsbuildinfo
+
 #Claude
 .claude/
