feat: add Ralph-loop redesign setup (42 user stories)
- prd.json with 42 redesign stories (design system → polish)
- ralph.sh configured for Claude Code
- CLAUDE.md with redesign agent instructions
- CONTEXT.md with full business/design context
- PLANNING.md with project phases
- progress.txt initialized

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-# Ralph working files (keep locally, don't push)
-ralph.sh
+# Ralph assets (not needed)
 ralph.webp
 ralph-flowchart.png
 prompt.md
-prd.json
 prd.json.example
-progress.txt
-status.md
-AGENTS.md
-CLAUDE.md
 .last-branch
 skills/
 flowchart/
