feat: add Drizzle + PostgreSQL adapter for Auth.js magic links
- Install drizzle-orm, @auth/drizzle-adapter, postgres, drizzle-kit
- Add lib/db.ts (lazy-init PostgreSQL connection)
- Add lib/schema.ts (users, accounts, verificationTokens tables)
- Add drizzle.config.ts for migrations
- Wire DrizzleAdapter into Auth.js config
- Add DATABASE_URL to env validation and .env.example

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,10 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # Auth.js (NextAuth v5)
 # -----------------------------------------------------------------------------
 # Generate with: npx auth secret
+# PostgreSQL database (for Auth.js adapter — verification tokens, accounts)
+# On Coolify: use the internal connection string from your PostgreSQL service
+DATABASE_URL=postgres://user:password@localhost:5432/caferico_auth
+
 AUTH_SECRET=your-auth-secret-here
 
 # Google OAuth (https://console.cloud.google.com/apis/credentials)
