ralph: step 3 - add MOLLIE_WEBHOOK_TOKEN to .env.example and lib/env.ts validation

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@
 # Use test key (test_xxx) for development, live key (live_xxx) for production.
 MOLLIE_API_KEY=test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
+# Shared secret appended to webhook URL for verification.
+# Generate with: openssl rand -hex 32
+MOLLIE_WEBHOOK_TOKEN=your-webhook-token-here
+
 # -----------------------------------------------------------------------------
 # WooCommerce REST API (headless backend)
 # -----------------------------------------------------------------------------
