--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@auth/drizzle-adapter": "^1.11.1",
     "@mollie/api-client": "^4.4.0",
     "drizzle-orm": "^0.45.1",
-    "next": "^15.5.11",
+    "next": "15.1.0",
     "next-auth": "^5.0.0-beta.30",
     "next-intl": "^3.14.0",
     "postgres": "^3.4.8",
